2009-06-05  Helmut Eller  <heller@common-lisp.net>

	Don't clutter compiler messages with source positions.  Especially
	stuff like "In an anonymous lambda form inside an anonymous lambda
	form inside an anonymous lambda form inside FOO: Undeclared free
	variable X" is not helpful.

	* swank-openmcl.lisp (compiler-warning-short-message): New GF.
	(handle-compiler-warning): Use it.

	(disassemble-frame): Print current PC.

2009-06-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-dispatch-event [:emcas-rex]): Don't clutter
	the main code-path with confusing error handling.

2009-06-04  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (*known-processes*, mailbox): Use a weak
	hashtable to plug the memory leak.

2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (def-slime-test): Forgot to remove debugging code.

2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-dispatch-event :emacs-rex): Make sure that we
	pop the continuation on erroneous send.

	Patch by Mark Cox <markcox80@gmail.com>.

2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (tokenize-symbol-thoroughly): Make it work correctly
	on escaped symbols.

2009-05-28  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-disconnect): Now only disconnects one
	connection, current one by default, or given by argument.
	(slime-disconnect-all): New. What `slime-disconnect' was before.
	(def-slime-test): Changed: expected failures are now given
	by (:fails-for ...) clauses. Extended: new clause (:style ...) to
	have a test run only on a certain communication style. Updated
	existing test cases accordingly.
	([struct] slime-test): New slot `skipped'.
	(slime-skipped-tests): New var.
	(slime-execute-tests): Adapted accordingly.
	([test] disconnect): Renamed to `disconnect-and-reconnect'
	([test] disconnect-one-conneciton): New.

	Adapted from patch by Stas Boukarev.

2009-05-24  Tobias C. Rittweiler  <tcr@freebits.de>
